Changed calendar to list view

--- a/contents/templates/events.twig
+++ b/contents/templates/events.twig
@@ -24,7 +24,7 @@
 					right: 'month,listYear'
 				},
 				defaultDate: '2017-01-01',
-				defaultView: 'month',
+				defaultView: 'listYear',
 				displayEventTime: false,
 				googleCalendarApiKey: 'AIzaSyBEDJtUs6oUxRDPXSVXYr0eGTCS2OacDms',
 				events: {
