--- a/docs/css/phpdd17.css
+++ b/docs/css/phpdd17.css
@@ -3,13 +3,13 @@
 }
 
 a {
-	color: #f47c20;
+	color: #000000;
 }
 
 a:hover,
 a:focus,
 a:active {
-	color: #d16920;
+	color: #202020;
 	text-decoration: none;
 }
 
@@ -96,6 +96,11 @@ a:active {
 	margin: 5px 0;
 }
 
+#sidenav .nav > li > a {
+	text-transform: uppercase;
+	font-size: larger;
+}
+
 #sidenav .nav > li.active > a {
 	background-color: #f6f6f6;
 }
@@ -112,8 +117,9 @@ a:active {
 	display: inline-block;
 }
 
-#swk {
-	padding: 10px 20px;
+#swk,
+#phpugdd {
+	padding: 10px 40px 10px 0;
 }
 
 #calendar {
@@ -127,6 +133,16 @@ a:active {
 #calendar .fc-event-dot {
 	background-color: #ff8c00;
 	border-color: #f47c20;
+}
+
+h1.page-headline {
+	line-height: 77px;
+	text-transform: uppercase;
+}
+
+.text-twitter {
+	color: #4a9ee9;
+	font-weight: bold;
 }
 
 /* collapsed sidebar styles */
