Updates ticket page

--- a/contents/templates/theme-phpdd17.twig
+++ b/contents/templates/theme-phpdd17.twig
@@ -175,7 +175,7 @@
 
 					</span>
 
-					<small class="text-muted">September, 22<small>nd</small> 2017 |</small> {{ page.getPageTitle }}
+					<small class="text-muted">September 22<small>nd</small> 2017 |</small> {{ page.getPageTitle }}
 				</h1>
 
 				<hr class="blockspace">
