--- a/contents/templates/theme-phpdd17.twig
+++ b/contents/templates/theme-phpdd17.twig
@@ -231,6 +231,12 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{ project.getUrl('/js/main.js') ~ '?' ~ ('now'|date('YmdHis')) }}"></script>
+<script type="text/javascript" src="{{ project.getUrl('/js/jquery.countdown.min.js') }}"></script>
+<script type="text/javascript">
+    $("#event-start").countdown('2017/09/22 08:30:00', function(event) {
+        $(this).html(event.strftime('%-w weeks %-d days %Hh %Mm %Ss'));
+    });
+</script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
