Adds code of conduct page and dd community image

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -184,6 +184,14 @@
 						</a>
 					</div>
 
+					<hr class="blockspace">
+
+					<div id="swk">
+						<a href="https://dresden-code-of-conduct.org" target="_blank" title="Dresden Community - Code of Conduct">
+							<img src="{{ project.getUrl('/images/dresden-community-logo.png') }}" alt="Logo Dresden Community" class="img-responsive">
+						</a>
+					</div>
+
 				</nav>
 			</div>
 
