--- a/docs/css/phpdd17.css
+++ b/docs/css/phpdd17.css
@@ -3,13 +3,13 @@
 }
 
 a {
-	color: #000000;
+	color: #a7231d;
 }
 
 a:hover,
 a:focus,
 a:active {
-	color: #202020;
+	color: #bf2e26;
 	text-decoration: none;
 }
 
@@ -143,6 +143,11 @@ h1.page-headline {
 .text-twitter {
 	color: #4a9ee9;
 	font-weight: bold;
+}
+
+.lang-switch li.active a {
+	font-weight: bold;
+	color: #808080;
 }
 
 /* collapsed sidebar styles */
