--- a/contents/templates/theme-phpdd17.twig
+++ b/contents/templates/theme-phpdd17.twig
@@ -214,7 +214,10 @@
 							{% if page.getUri starts with '/phpdd17' %}
 								<small class="text-muted">22. September 2017 |</small>
 							{% elseif page.getUri starts with '/en/phpdd17' %}
-								<small class="text-muted">September 22<small>nd</small> 2017 |</small>
+								<small class="text-muted">September 22
+									<small>nd</small>
+									2017 |
+								</small>
 							{% endif %}
 							{{ page.getPageTitle }}
 						</h1>
@@ -275,13 +278,7 @@
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="{{ project.getUrl('/js/main.js') ~ '?' ~ ('now'|date('YmdHis')) }}"></script>
-<script type="text/javascript" src="{{ project.getUrl('/js/jquery.countdown.min.js') }}"></script>
-<script type="text/javascript">
-	$( "#event-start" ).countdown( '2017/09/22 08:30:00', function ( event )
-	{
-		$( this ).html( event.strftime( '%-w weeks %-d days %Hh %Mm %Ss' ) );
-	} );
-</script>
+<script type="text/javascript" src="{{ project.getUrl('/js/countdown.js') ~ '?' ~ ('now'|date('YmdHis')) }}"></script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
