--- a/contents/templates/theme-phpdd17.twig
+++ b/contents/templates/theme-phpdd17.twig
@@ -109,6 +109,23 @@
 
 <div class="page-container">
 
+	<div class="meta-bar">
+		<div class="container text-center">
+			<ul class="list-inline h4 lang-switch">
+				<li>
+					<i class="fa fa-language"></i>
+				</li>
+				<li{% if page.getUri starts with '/phpdd17' %} class="active"{% endif %}>
+					<a href="{{ project.getUrl('/phpdd17.html') }}" title="Zur deutschen Version">DEUTSCHE WEBSITE</a>
+				</li>
+				<li>|</li>
+				<li{% if page.getUri starts with '/en/phpdd17' %} class="active"{% endif %}>
+					<a href="{{ project.getUrl('/en/phpdd17.html') }}" title="Go to english version">ENGLISH WEBSITE</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+
 	<div class="container">
 
 		<div class="row row-offcanvas row-offcanvas-left">
@@ -125,6 +142,26 @@
 							<img src="{{ project.getUrl('/images/events/phpdd17/phpdd17-logo.png') }}" id="brandimg" class="img-responsive" alt="{{ project.getName }}">
 						</a>
 					{% endif %}
+
+
+					<div id="clockdiv" class="hidden-xs">
+						<div>
+							<span class="days"></span>
+							<div class="smalltext">Tage</div>
+						</div>
+						<div>
+							<span class="hours"></span>
+							<div class="smalltext">Stunden</div>
+						</div>
+						<div>
+							<span class="minutes"></span>
+							<div class="smalltext">Minuten</div>
+						</div>
+						<div>
+							<span class="seconds"></span>
+							<div class="smalltext">Sekunden</div>
+						</div>
+					</div>
 
 
 					<hr class="blockspace">
@@ -192,20 +229,7 @@
 			<div class="col-xs-12 col-sm-8 col-md-9 col-lg-9" id="mainstage">
 
 				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-3 col-lg-2 text-center">
-						<br>
-						<br class="hidden-xs hidden-sm">
-						<ul class="list-inline h4 lang-switch">
-							<li{% if page.getUri starts with '/phpdd17' %} class="active"{% endif %}>
-								<a href="{{ project.getUrl('/phpdd17.html') }}" title="Zur deutschen Version">DE</a>
-							</li>
-							<li>|</li>
-							<li{% if page.getUri starts with '/en/phpdd17' %} class="active"{% endif %}>
-								<a href="{{ project.getUrl('/en/phpdd17.html') }}" title="Go to english version">EN</a>
-							</li>
-						</ul>
-					</div>
-					<div class="col-xs-12 col-sm-12 col-md-9 col-lg-10">
+					<div class="col-xs-12">
 						<h1 class="text-right page-headline">
 							<a href="javascript:void(0);" data-toggle="offcanvas" data-target="#sidebar" class="visible-xs hidden-sm hidden-md hidden-lg pull-left">
 								<i class="fa fa-bars"></i>&nbsp;|&nbsp;
@@ -224,26 +248,17 @@
 					</div>
 				</div>
 
-
-				<hr class="blockspace">
-
-				<div class="row hidden-xs hidden-sm">
-
-					<div class="col-md-12 col-lg-12">
-						<ul class="breadcrumb hidden-xs hidden-sm">
-							{% for uri, title in breadCrumb %}
-								{% if not loop.last %}
-									<li>
-										<a href="{{ project.getUrl(uri) }}">{{ title }}</a>
-									</li>
-								{% else %}
-									<li class="active">{{ title }}</li>
-								{% endif %}
-							{% endfor %}
-						</ul>
-					</div>
-
-				</div>
+				<ul class="breadcrumb hidden-xs hidden-sm">
+					{% for uri, title in breadCrumb %}
+						{% if not loop.last %}
+							<li>
+								<a href="{{ project.getUrl(uri) }}">{{ title }}</a>
+							</li>
+						{% else %}
+							<li class="active">{{ title }}</li>
+						{% endif %}
+					{% endfor %}
+				</ul>
 
 				{% block content %}{% endblock %}
 
