--- a/docs/css/phpdd17.css
+++ b/docs/css/phpdd17.css
@@ -45,6 +45,11 @@ a:active {
 	color: #000000;
 }
 
+.meta-bar {
+	background-color: #000000;
+	height: 35px;
+}
+
 #brandimg {
 	margin: 0 auto;
 }
@@ -145,6 +150,14 @@ h1.page-headline {
 	font-weight: bold;
 }
 
+.lang-switch {
+	color: #ffffff;
+}
+
+.lang-switch li a {
+	color: #ffffff;
+}
+
 .lang-switch li.active a {
 	font-weight: bold;
 	color: #808080;
@@ -166,35 +179,43 @@ h1.page-headline {
 
 /* Countdown clock */
 /* https://codepen.io/SitePoint/pen/MwNPVq/ */
-#clockdiv{
+#clockdiv {
 	font-family: "robotoregular", Helvetica, Arial, sans-serif;
-	color: #fff;
+	color: #ffffff;
 	display: block;
 	font-weight: 100;
 	text-align: center;
-	font-size: 30px;
-	margin: 0 auto;
+	margin: 25px 0 0 0;
 }
 
-#clockdiv > div{
+#clockdiv > div {
+	color: #808080;
+	padding: 3px;
+	border-radius: 3px;
+	background: #f5f5f5;
+	display: inline-block;
+	font-size: 10px;
+	font-weight: 600;
+	width: 23%;
+}
+
+#clockdiv div > span {
 	color: #000000;
-	padding: 10px;
+	padding: 8px;
 	border-radius: 3px;
-	background: #eaeaea;
+	background: #ffffff;
 	display: inline-block;
-}
-
-#clockdiv div > span{
-	color: #ffffff;
-	padding: 15px;
-	border-radius: 3px;
-	background: #a7231d;
-	display: inline-block;
-}
-
-.smalltext{
-	padding-top: 5px;
+	width: 97%;
 	font-size: 16px;
+}
+
+.smalltext {
+	padding-top: 5px;
+	font-size: 12px;
+}
+
+.breadcrumb {
+	margin-top: 17px;
 }
 
 /* collapsed sidebar styles */
