Adds eventbrite ticket sale widget, adds bitExpert & prooph-software to PHPDD17 sponsors, adds sponsor table to sponsoring page, fixes mobile layout issues, fixes too large speaker images

--- a/contents/templates/theme-phpdd17.twig
+++ b/contents/templates/theme-phpdd17.twig
@@ -249,7 +249,7 @@
 					<div class="col-xs-12">
 						<h1 class="text-right page-headline">
 							<a href="javascript:void(0);" data-toggle="offcanvas" data-target="#sidebar" class="visible-xs hidden-sm hidden-md hidden-lg pull-left">
-								<i class="fa fa-bars"></i>&nbsp;|&nbsp;
+								<i class="fa fa-bars"></i>
 							</a>
 
 							{% if page.getUri starts with '/phpdd17' %}
