Adds square image for social pages, fixes page titles

--- a/contents/templates/theme-phpdd17.twig
+++ b/contents/templates/theme-phpdd17.twig
@@ -21,7 +21,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-	<title>{{ page.getPageTitle }} | PHP Developer Day 2017</title>
+	<title>{{ page.getPageTitle }} | PHP Developer Day 2017 • Dresden, Germany</title>
 	<meta name="description" content="Dresden's largest PHP event takes the 3rd round">
 	<meta name="keywords" content="{{ page.getTags|join(', ') }}">
 	<meta name="HandheldFriendly" content="True"/>
@@ -35,7 +35,7 @@
 {
   "@context" : "http://schema.org",
   "@type": "Person",
-  "name": "PHP USERGROUP DRESDEN e.V.",
+  "name": "PHP Developer Day 2017 • Dresden, Germany",
   "image": "{{ project.getUrl(page.getImageUrl) }}",
   "url": "{{ project.getBaseUrl }}",
   "sameAs" : [
@@ -73,7 +73,7 @@
 
 	<meta property="og:site_name" content="{{ project.getName }}"/>
 	<meta property="og:type" content="article"/>
-	<meta property="og:title" content="{{ page.getPageTitle }} | {{ project.getName }}"/>
+	<meta property="og:title" content="{{ page.getPageTitle }} | PHP Developer Day 2017 • Dresden, Germany"/>
 	<meta property="og:description" content="{{ page.getDescription }}"/>
 	<meta property="og:url" content="{{ project.getBaseUrl }}"/>
 	<meta property="og:image" content="{{ project.getUrl(page.getImageUrl) }}"/>
@@ -83,7 +83,7 @@
 		<meta property="article:tag" content="{{ tag }}"/>
 	{% endfor %}
 	<meta name="twitter:card" content="summary_large_image"/>
-	<meta name="twitter:title" content="{{ page.getPageTitle }} | {{ project.getName }}"/>
+	<meta name="twitter:title" content="{{ page.getPageTitle }} | PHP Developer Day 2017 • Dresden, Germany"/>
 	<meta name="twitter:description" content="{{ page.getDescription }}"/>
 	<meta name="twitter:url" content="{{ project.getUrl(page.getUri ) }}"/>
 	<meta name="twitter:image:src" content="{{ project.getUrl(page.getImageUrl) }}"/>
