--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -178,6 +178,8 @@
 
 					<hr class="blockspace">
 
+					<h4>Community PHPartners</h4>
+
 					<div id="swk">
 						<a href="https://www.softwerkskammer.org/groups/sachsen" target="_blank" title="Softwerkskammer Sachsen">
 							<img src="{{ project.getUrl('/images/softwerkskammer.png') }}" alt="Logo Softwerkskammer" class="img-responsive">
@@ -189,6 +191,14 @@
 					<div id="swk">
 						<a href="https://dresden-code-of-conduct.org" target="_blank" title="Dresden Community - Code of Conduct">
 							<img src="{{ project.getUrl('/images/dresden-community-logo.png') }}" alt="Logo Dresden Community" class="img-responsive">
+						</a>
+					</div>
+
+					<hr class="blockspace">
+
+					<div id="swk">
+						<a href="https://2017.phpce.eu" target="_blank" title="php Central Europe 2017">
+							<img src="{{ project.getUrl('/images/coops/phpce-logo.png') }}" alt="Logo phpCE - php Central Europe" class="img-responsive">
 						</a>
 					</div>
 
