Fixes meta description

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -22,7 +22,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
 	<title>{{ page.getPageTitle }} | {{ project.getName }}</title>
-	<meta name="description" content="Coming Soon">
+	<meta name="description" content="Website des PHP USERGROUP DRESDEN e.V.">
 	<meta name="keywords" content="{{ page.getTags|join(', ') }}">
 	<meta name="HandheldFriendly" content="True"/>
 	<meta name="geo.region" content="DE-SN"/>
