Add PHPDD18 call for papers teaser

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -113,7 +113,7 @@
 						{% if ('now'|date('m')) == 12 %}
 							<img src="{{ project.getUrl('/images/logo-xmas.png') }}" id="brandimg" class="img-responsive" alt="{{ project.getName }}">
 						{% else %}
-							<img src="{{ project.getUrl('/images/logo.png') }}" id="brandimg" class="img-responsive" alt="{{ project.getName }}">
+							<img src="{{ project.getUrl('/images/phpugdd-logo.svg') }}" id="brandimg" class="img-responsive" alt="{{ project.getName }}">
 						{% endif %}
 					</a>
 
