Changed phpce base url and fixed duplicate ids in theme.twig

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -184,7 +184,7 @@
 
 					<h4>Community PHPartners</h4>
 
-					<div id="swk">
+					<div id="code-of-conduct">
 						<a href="https://www.softwerkskammer.org/groups/sachsen" target="_blank" title="Softwerkskammer Sachsen">
 							<img src="{{ project.getUrl('/images/softwerkskammer.png') }}" alt="Logo Softwerkskammer" class="img-responsive">
 						</a>
@@ -200,8 +200,8 @@
 
 					<hr class="blockspace">
 
-					<div id="swk">
-						<a href="https://2017.phpce.eu" target="_blank" title="php Central Europe 2017">
+					<div id="phpce">
+						<a href="https://2019.phpce.eu" target="_blank" title="php Central Europe 2019">
 							<img src="{{ project.getUrl('/images/coops/phpce-logo.png') }}" alt="Logo phpCE - php Central Europe" class="img-responsive">
 						</a>
 					</div>
