--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -116,6 +116,14 @@ a:active {
 	padding: 10px 20px;
 }
 
+#phpce {
+	padding: 10px 20px;
+}
+
+#code-of-conduct {
+	padding: 10px 20px;
+}
+
 #calendar {
 	width: 100%;
 	margin: 20px auto 0 auto;
