--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -192,7 +192,7 @@
 
 					<hr class="blockspace">
 
-					<div id="swk">
+					<div id="code-of-conduct">
 						<a href="https://dresden-code-of-conduct.org" target="_blank" title="Dresden Community - Code of Conduct">
 							<img src="{{ project.getUrl('/images/dresden-community-logo.png') }}" alt="Logo Dresden Community" class="img-responsive">
 						</a>
@@ -200,8 +200,8 @@
 
 					<hr class="blockspace">
 
-					<div id="swk">
-						<a href="https://2017.phpce.eu" target="_blank" title="php Central Europe 2017">
+					<div id="phpce">
+						<a href="https://2019.phpce.eu" target="_blank" title="php Central Europe 2019">
 							<img src="{{ project.getUrl('/images/coops/phpce-logo.png') }}" alt="Logo phpCE - php Central Europe" class="img-responsive">
 						</a>
 					</div>
