--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -203,3 +203,9 @@ table td {
 table tr:nth-child(even) {
     background-color: #fafafa;
 }
+
+.h5, h5 {
+    margin: 15px 0;
+    font-size: 16px;
+    font-weight: bold;
+}
