Add event calendar button to main page

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -126,6 +126,11 @@
 						<i class="fa fa-bullhorn"></i> Submit your talk!
 					</a>
 
+					<a href="@calendar_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. – Meetup Calendar Subscription"
+					   class="btn btn-default btn-block btn-lg text-uppercase">
+						<i class="fa fa-calendar"></i> Event-Kalender Abo
+					</a>
+
 					<hr class="blockspace">
 
 					<ul class="nav">
